--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 java/base/bin/
 java/ot/bin/
 java/oxygen/bin/
+java/oxygen-extension-bundle/bin/
 java/AdvancedKeyrefDialogTest/
 java/base/.externalToolBuilders/
 java/oxygen/.externalToolBuilders/DitaSemiaOxygen build.xml [Builder].launch
