renamed DocumentCache to BookCache display number for xrefs to topics

--- a/java/ot/.project
+++ b/java/ot/.project
@@ -21,7 +21,7 @@
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/DitaSemiaOt build.xml [Builder].launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/DitaSemiaOt build.xml [Builder] (1).launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
