--- a/java/base/.classpath
+++ b/java/base/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/saxonHE-9.6.0.7.jar"/>
 	<classpathentry kind="lib" path="lib/log4j.jar"/>
 	<classpathentry kind="var" path="OXYGENXML/lib/saxon9ee.jar"/>
+	<classpathentry kind="var" path="OXYGENXML/lib/xercesImpl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
