--- a/java/base/.classpath
+++ b/java/base/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/log4j.jar"/>
 	<classpathentry kind="var" path="OXYGENXML/lib/saxon9ee.jar"/>
 	<classpathentry kind="var" path="OXYGENXML/lib/xercesImpl.jar"/>
+	<classpathentry kind="var" path="OXYGENXML/lib/commons-io-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
